close #200 Compile error when Float myFloat = new Float(doubleObject);